crates/shipper/src/state/events/snapshots/shipper__state__events__tests__execution_finished_partial_failure_debug.snap
---
source: crates/shipper-events/src/lib.rs
expression: event
---
PublishEvent {
    timestamp: 2025-01-15T12:00:00Z,
    event_type: ExecutionFinished {
        result: PartialFailure,
    },
    package: "workspace",
}
