crates/shipper/src/state/events/snapshots/shipper__state__events__tests__package_output_debug.snap
---
source: crates/shipper-events/src/lib.rs
expression: event
---
PublishEvent {
    timestamp: 2025-01-15T12:00:00Z,
    event_type: PackageOutput {
        stdout_tail: "Uploading core-lib v0.1.0\nFinished",
        stderr_tail: "warning: unused import",
    },
    package: "core-lib@0.1.0",
}
