crates/shipper/src/state/events/snapshots/shipper__state__events__tests__plan_created_yaml.snap
---
source: crates/shipper-events/src/lib.rs
expression: event
---
timestamp: "2025-01-15T12:00:00Z"
event_type:
  type: plan_created
  plan_id: plan-abc123
  package_count: 3
package: workspace
