crates/shipper/src/state/events/snapshots/shipper__state__events__tests__readiness_lifecycle_debug.snap
---
source: crates/shipper-events/src/lib.rs
expression: events
---
[
    PublishEvent {
        timestamp: 2025-01-15T12:00:00Z,
        event_type: ReadinessStarted {
            method: Both,
        },
        package: "my-lib@2.0.0",
    },
    PublishEvent {
        timestamp: 2025-01-15T12:00:00Z,
        event_type: ReadinessPoll {
            attempt: 1,
            visible: false,
        },
        package: "my-lib@2.0.0",
    },
    PublishEvent {
        timestamp: 2025-01-15T12:00:00Z,
        event_type: ReadinessPoll {
            attempt: 2,
            visible: false,
        },
        package: "my-lib@2.0.0",
    },
    PublishEvent {
        timestamp: 2025-01-15T12:00:00Z,
        event_type: ReadinessPoll {
            attempt: 3,
            visible: true,
        },
        package: "my-lib@2.0.0",
    },
    PublishEvent {
        timestamp: 2025-01-15T12:00:00Z,
        event_type: ReadinessComplete {
            duration_ms: 9500,
            attempts: 3,
        },
        package: "my-lib@2.0.0",
    },
]
